# parsearg

./: .README.md.swp  .parsearg.c.swp  README  README.md  configure.ac  parsearg.c  prog.c
exemple/: .parsearg.h.swp  .prog.c.swp  Makefile  README  a.out  parsearg.c  parsearg.h  prog  prog.c
exemple1/: Makefile  parsearg.c  prog  prog.c
exemple2/: .basex.c.swp  Makefile  basex.c  parsearg.c  parsearg.h  prog.c
exemple3/: .math.c.swp  Makefile  math.c  parsearg.c  parsearg.h
exemple3/math/: .math.c.swp  README  math  parsearg.c  prog.c
src/: Makefile.am  parsearg.c  parsearg.h
